# users

./: Cargo.toml  Dockerfile  LICENSE
migrations/: V1__up.sql
src/: main.rs
src/application/: mod.rs  state.rs
src/application/services/: mod.rs  users.rs
src/domain/: mod.rs  types.rs
src/domain/dto/: credentials.rs  file.rs  mod.rs  update_password.rs  user_data.rs  user_id.rs
src/domain/interfaces/: file_repository.rs  file_storage.rs  mod.rs  user_repository.rs  user_service.rs  user_storage.rs
src/domain/models/: mod.rs  roles.rs  user.rs
src/handlers/: error.rs  mod.rs
src/handlers/files/: add_file.rs  get_files.rs  mod.rs  remove_file.rs
src/handlers/user/: add_user.rs  change_password.rs  info.rs  mod.rs  remove.rs
src/infrastructure/: file_repository.rs  mod.rs  postgres.rs  user_repository.rs
