[package]
name = "users"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
axum = { version = "0.7.9", features = ["tracing"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
deadpool-postgres = { version = "0.14.0", features = ["rt_tokio_1"] }
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1"] }
dotenvy = "0.15.7"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = "0.3.19"
refinery = { version = "0.8.14", features = ["tokio-postgres"] }